--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,10 @@ pretty_env_logger = "0.1"
 log = "0.4"
 hyper = "0.11"
 futures = "0.1"
-futures-cpupool ="0.1"
+futures-cpupool = "0.1"
+mime = "0.3"
+mime_guess = "2.0.0-alpha.3"
+serde_json = "1.0"
+serde = "1.0"
+serde_derive = "1.0"
 
