--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,7 @@ mime_guess = "2.0.0-alpha.3"
 serde_json = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
+clap = "2"
+#lazy_static = "0.2"
+quick-error = "1.2"
 
