Transcoding is working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ clap = "2"
 quick-error = "1.2"
 url = "1.6"
 percent-encoding = "1.0"
+num_cpus = "1.8"
 
 [dependencies.taglib]
 git = "https://github.com/ebassi/taglib-rust"
