--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.0.0-beta.3",
     "jquery": "^3.2.1",
     "js-sha256": "^0.9.0",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "showdown": "^1.8.6"
   }
 }
