--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,14 @@ serde_json = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 clap = "2"
-#lazy_static = "0.2"
+lazy_static = "0.2"
 quick-error = "1.2"
 url = "1.6"
 percent-encoding = "1.0"
 num_cpus = "1.8"
 ring = "0.12"
 data-encoding = "2.1"
+regex = "0.2"
 
 # forr ssl
 tokio-tls = {version="0.1", features=["tokio-proto"]}
