--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ rust:
   - nightly
 before_install: 
   - sudo apt-get -qq update
-  - sudo apt-get install -y  openssl libssl-dev libtag1-dev libtagc0-dev ffmpeg
+  - sudo apt-get install -y  openssl libssl-dev libtag1-dev libtagc0-dev
+  - curl https://johnvansickle.com/ffmpeg/builds/ffmpeg-git-64bit-static.tar.xz | tar  xJv --strip-components=1 --wildcards "*/ffmpeg"
+  - sudo cp ffmpeg /usr/local/bin
 matrix:
   fast_finish: true
   allow_failures:
