--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ matrix:
   - rust: nightly
   include:
     - language: node_js
+      node_js:
+      - "iojs"
+      - "7"
       script:
       - cd client
       - npm install
