--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Ivan <ivan.zderadicka@gmail.com>"]
 [dependencies]
 pretty_env_logger = "0.2"
 log = "0.4"
-hyper = "0.11"
+hyper = "=0.11.25"
 futures = "0.1"
 futures-cpupool = "0.1"
 mime = "0.3"
