--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ pretty_env_logger = "0.2"
 log = "0.4"
 hyper = "=0.11.25"
 futures = "0.1"
-futures-cpupool = "0.1"
 mime = "0.3"
 mime_guess = "2.0.0-alpha.4"
 serde_json = "1.0"
@@ -26,14 +25,17 @@ data-encoding = "2.1"
 regex = "1.0"
 
 # forr ssl
-tokio-tls = {version="0.1", features=["tokio-proto"]}
-native-tls = "0.1"
-tokio-proto = "0.1"
-tokio-service = "0.1"
+tokio-tls = {version="0.1", features=["tokio-proto"], optional=true}
+native-tls = {version="0.1", optional=true}
+tokio-proto = {version="0.1", optional=true}
 
 [dependencies.taglib]
 git = "https://github.com/ebassi/taglib-rust"
 
 [dependencies.simple-thread-pool]
 git = "https://github.com/izderadicka/simple-thread-pool.git"
+
+[features]
+default = ["tls"]
+tls=["tokio-tls", "native-tls", "tokio-proto"]
 
