--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "audioserve"
-version = "0.4.2"
+version = "0.4.3"
 authors = ["Ivan <ivan.zderadicka@gmail.com>"]
 
 [dependencies]
@@ -24,7 +24,7 @@ ring = "0.12"
 data-encoding = "2.1"
 regex = "1.0"
 
-# forr ssl
+# for ssl
 tokio-tls = {version="0.1", features=["tokio-proto"], optional=true}
 native-tls = {version="0.1", optional=true}
 tokio-proto = {version="0.1", optional=true}
