--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,10 +28,11 @@ tokio = "0.1"
 tokio-fs = "0.1.2"
 tokio-process = "0.2"
 tokio-threadpool = "0.1"
+dirs = "1.0"
 
 # for ssl
-tokio-tls = {version="0.1", features=["tokio-proto"], optional=true}
-native-tls = {version="0.1", optional=true}
+tokio-tls = {git="https://github.com/izderadicka/tokio-tls.git", branch ="new-tokio", optional=true}
+native-tls = {version="0.2", optional=true}
 
 [dependencies.taglib]
 git = "https://github.com/ebassi/taglib-rust"
