--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,28 +14,26 @@ mime_guess = "2.0.0-alpha.4"
 serde_json = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
-serde_yaml = "0.7"
+serde_yaml = "0.8"
 clap = "2"
-lazy_static = "1.0"
+lazy_static = "1.1"
 quick-error = "1.2"
 url = "1.7"
 percent-encoding = "1.0"
 num_cpus = "1.8"
-ring = "0.12"
+ring = "0.13"
 data-encoding = "2.1"
 regex = "1.0"
 tokio = "0.1"
-tokio-fs = "0.1.2"
+tokio-fs = "0.1.3"
 tokio-process = "0.2"
 tokio-threadpool = "0.1"
 dirs = "1.0"
+taglib = "1.0"
 
 # for ssl
 tokio-tls = {version="0.2", optional=true}
 native-tls = {version="0.2", optional=true}
-
-[dependencies.taglib]
-git = "https://github.com/ebassi/taglib-rust"
 
 [features]
 default = ["tls", "symlinks"]
