--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "audioserve"
-version = "0.5.2"
+version = "0.6.0"
 authors = ["Ivan <ivan.zderadicka@gmail.com>"]
 
 [dependencies]
@@ -24,7 +24,7 @@ num_cpus = "1.8"
 ring = "0.13"
 data-encoding = "2.1"
 regex = "1.0"
-tokio = "0.1"
+tokio = "0.1.11"
 tokio-fs = "0.1.3"
 tokio-process = "0.2"
 tokio-threadpool = "0.1"
@@ -35,9 +35,11 @@ taglib = "1.0"
 tokio-tls = {version="0.2", optional=true}
 native-tls = {version="0.2", optional=true}
 
-cachedirtree = {git="https://github.com/izderadicka/cachedirtree.git"}
+cachedirtree = {git="https://github.com/izderadicka/cachedirtree.git", optional=true}
 
 [features]
-default = ["tls", "symlinks"]
+default = ["tls", "symlinks", "search-cache"]
 tls=["tokio-tls", "native-tls"]
-symlinks=[]
+symlinks=["cachedirtree/symlinks"]
+search-cache=["cachedirtree"]
+
