--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y  openssl libssl-dev libtag1-dev libtagc0-dev ffmpeg
 cache: cargo
+script:
+  - cargo test --verbose
+  - cargo test --verbose --no-default-features
 matrix:
   fast_finish: true
   allow_failures:
