Feature and fix in sending from cache

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,11 +36,13 @@ tokio-tls = {version="0.2", optional=true}
 native-tls = {version="0.2", optional=true}
 
 cachedirtree = {git="https://github.com/izderadicka/cachedirtree.git", optional=true}
-simple-file-cache = {git="https://github.com/izderadicka/simple-file-cache.git", features=["asynch"], version="0.1.1"}
+simple-file-cache = {git="https://github.com/izderadicka/simple-file-cache.git", features=["asynch"], version="0.1.1", optional=true}
+
 
 [features]
-default = ["tls", "symlinks", "search-cache"]
+default = ["tls", "symlinks", "search-cache", "transcoding-cache"]
 tls=["tokio-tls", "native-tls"]
 symlinks=["cachedirtree/symlinks"]
 search-cache=["cachedirtree"]
+transcoding-cache=["simple-file-cache"]
 
