Cache is generally working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,15 @@ tokio-tls = {version="0.2", optional=true}
 native-tls = {version="0.2", optional=true}
 
 cachedirtree = {git="https://github.com/izderadicka/cachedirtree.git", optional=true}
-simple-file-cache = {git="https://github.com/izderadicka/simple-file-cache.git", features=["asynch"], version="0.1.2", optional=true}
+
 bytes = {version="0.4", optional=true}
+[dependencies.simple-file-cache]
+path="../file-cache"
+#git="https://github.com/izderadicka/simple-file-cache.git"
+features=["asynch"]
+#version="0.1.2"
+optional=true
+
 
 [features]
 default = ["tls", "symlinks", "search-cache", "transcoding-cache"]
