--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,15 +38,15 @@ cachedirtree = {git="https://github.com/izderadicka/cachedirtree.git", optional=
 
 bytes = {version="0.4", optional=true}
 [dependencies.simple-file-cache]
-path="../file-cache"
-#git="https://github.com/izderadicka/simple-file-cache.git"
+#path="../file-cache"
+git="https://github.com/izderadicka/simple-file-cache.git"
 features=["asynch"]
-#version="0.1.2"
+#version="0.1.3"
 optional=true
 
 
 [features]
-default = ["tls", "symlinks", "search-cache", "transcoding-cache"]
+default = ["tls", "symlinks", "search-cache"]
 tls=["tokio-tls", "native-tls"]
 symlinks=["cachedirtree/symlinks"]
 search-cache=["cachedirtree"]
