Significant refactoring of how transcoding is defined.
- enables to add other transcoding easily
- added opus-in-webm
- fixes some small isues in player.js
-version bump

--- a/test_data/transcodings.yaml
+++ b/test_data/transcodings.yaml
@@ -1,13 +1,16 @@
 low:
-  bitrate: 16
-  compression_level: 3
-  cutoff: WideBand
+  opus-in-webm:
+    bitrate: 16
+    compression_level: 3
+    cutoff: WideBand
 medium:
-  bitrate: 24
-  compression_level: 6
-  cutoff: SuperWideBand
+  opus-in-webm:
+    bitrate: 24
+    compression_level: 6
+    cutoff: SuperWideBand
 high:
-  bitrate: 32
-  compression_level: 9
-  cutoff: SuperWideBand
+  opus-in-webm:
+    bitrate: 32
+    compression_level: 9
+    cutoff: SuperWideBand
   
