updated travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rust:
 before_install: 
   - sudo add-apt-repository -y ppa:mc3man/trusty-media
   - sudo apt-get -qq update
-  - sudo apt-get install -y  openssl libssl-dev libtag1-dev libtagc0-dev ffmpeg
+  - sudo apt-get install -y  openssl libssl-dev libtag1-dev libtagc0-dev ffmpeg yasm
 cache: cargo
 script:
   - cargo test --verbose --all-features
