--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,11 @@ matrix:
       - npm install
       - npm run build
 deploy:
-  rust: stable
   provider: script
   script: bash docker_push.sh
   on:
     branch: master
+    rust: stable
+    node_js: ignore
 
 
