Commits Cargo.lock
As per rust documentation, lockfiles should be committed
for binary applications.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,3 +56,6 @@ search-cache=["cachedirtree"]
 transcoding-cache=["simple-file-cache", "bytes"]
 libavformat = ["media_info"]
 
+[[bin]]
+name = "audioserve"
+path = "src/main.rs"
