Refactored code - included my dependencies into repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-/target/
+**/target/
 **/*.rs.bk
 .vscode
 *.old
@@ -8,3 +8,5 @@ npm-debug.log
 client/dist/bundle.js
 *.log
 rls/
+_static_build
+/crates/**/Cargo.lock
