--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "audioserve"
-version = "0.9.0"
+version = "0.9.1"
 authors = ["Ivan <ivan.zderadicka@gmail.com>"]
 
 [dependencies]
 pretty_env_logger = "0.3.0"
-log = "0.4"
+log = {version="0.4", features = ["release_max_level_info"]}
 hyper = "0.12"
 hyperx= "0.14.0"
 futures = "0.1"
@@ -29,40 +29,34 @@ tokio-process = "0.2"
 tokio-threadpool = "0.1"
 dirs = "1.0"
 
-taglib = {version="1.0", optional=false}
-
 # for ssl
 tokio-tls = {version="0.2", optional=true}
 native-tls = {version="0.2", optional=true}
 
-cachedirtree = {git="https://github.com/izderadicka/cachedirtree.git", optional=true}
+cachedirtree = {path="crates/cachedirtree", optional=true}
 
 bytes = {version="0.4", optional=true}
 
-media_info = {git="https://github.com/izderadicka/media_info", optional=true}
+media_info = {path="crates/media_info"}
 
 [dependencies.simple-file-cache]
-#path="../file-cache"
-git="https://github.com/izderadicka/simple-file-cache.git"
+path="crates/file-cache"
 features=["asynch"]
-#version="0.1.3"
 optional=true
 
 [dependencies.async-tar]
-#path="../async-tar"
-git="https://github.com/izderadicka/async-tar.git"
+path="crates/async-tar"
 optional=true
 
 [features]
-default = ["tls", "symlinks", "search-cache", "folder-download", "chapters"]
+default = ["tls", "symlinks", "search-cache", "folder-download"]
 tls=["tokio-tls", "native-tls"]
 symlinks=["cachedirtree/symlinks"]
 search-cache=["cachedirtree"]
 transcoding-cache=["simple-file-cache", "bytes"]
-libavformat = ["media_info"]
 folder-download = ["async-tar"]
-chapters = ["libavformat"]
-
+static = ["media_info/static"]
+partially-static = ["media_info/partially-static"]
 
 [profile.release]
 lto = true
