--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "audioserve"
-version = "0.9.1"
+version = "0.9.2"
 authors = ["Ivan <ivan.zderadicka@gmail.com>"]
 
 [dependencies]
@@ -28,6 +28,7 @@ tokio = "0.1.15"
 tokio-process = "0.2"
 tokio-threadpool = "0.1"
 dirs = "1.0"
+csv = "1.0"
 
 # for ssl
 tokio-tls = {version="0.2", optional=true}
