Significantly refactored - hopefully better code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,9 @@ tokio-process = "0.2"
 tokio-threadpool = "0.1"
 dirs = "1.0"
 csv = "1.0"
+unicase = "2.3"
+unicase_serde = "0.1.0"
+
 
 # for ssl
 tokio-tls = {version="0.2", optional=true}
