--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "js-sha256": "^0.9.0",
+    "moment": "^2.24.0",
     "popper.js": "^1.14.6",
     "showdown": "^1.9.0"
   }
