Stucked on builder need struct to convert header to bytes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 pretty_env_logger = "0.3.0"
 log = {version="0.4", features = ["release_max_level_info"]}
 hyper = "0.12"
-hyperx= "0.14.0"
+#hyperx= "0.14.0"
+headers = "0.2"
 futures = "0.1"
 mime = "0.3"
 mime_guess = "2.0.0-alpha.4"
