--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,12 +55,13 @@ optional=true
 
 [dependencies.websock]
 path="crates/websock"
+optional = true
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.13"
 
 [features]
-default = ["tls", "symlinks", "search-cache", "folder-download"]
+default = ["tls", "symlinks", "search-cache", "folder-download", "shared-positions"]
 tls=["tokio-tls", "native-tls"]
 symlinks=["cachedirtree/symlinks"]
 search-cache=["cachedirtree"]
@@ -68,6 +69,7 @@ transcoding-cache=["simple-file-cache", "bytes"]
 folder-download = ["async-tar"]
 static = ["media_info/static"]
 partially-static = ["media_info/partially-static"]
+shared-positions = ["websock"]
 
 [profile.release]
 lto = true
