--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,7 @@ matrix:
       - npm install
       - npm run build
     - language: minimal
-      if:
-        branch: master
-        tags: true
+      if: branch=master && tags IS present
       services:
         - docker
       deploy:
@@ -37,9 +35,7 @@ matrix:
           script: 
             - bash docker_push.sh
     - language: minimal
-      if:
-        branch: master
-        tags: true
+      if: branch=master && tags IS present
       services:
         - docker
       script: 
