--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,46 +1,47 @@
 [package]
 name = "audioserve"
-version = "0.11.3"
+version = "0.12.1"
 authors = ["Ivan <ivan.zderadicka@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-pretty_env_logger = "0.3.0"
+env_logger = "0.7"
 log = {version="0.4", features = ["release_max_level_info"]}
-hyper = "0.12"
-headers = "0.2"
-futures = "0.1"
+hyper = "0.13"
+headers = "0.3"
+futures = "0.3"
 mime = "0.3"
-mime_guess = "2.0.0-alpha.4"
+mime_guess = "2.0"
 serde_json = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_yaml = "0.8"
 clap = "2"
-lazy_static = "1.2.0"
+lazy_static = "1.4"
 quick-error = "1.2"
-url = "1.7"
-percent-encoding = "1.0"
-num_cpus = "1.9"
-ring = "0.14"
+url = "2.1"
+percent-encoding = "2.1"
+num_cpus = "1.12"
+ring = "0.16"
 data-encoding = "2.1"
 regex = "1.1"
-tokio = "0.1.15"
-tokio-process = "0.2"
-tokio-threadpool = "0.1"
-dirs = "1.0"
-csv = "1.0"
-unicase = "2.3"
+tokio = {version="0.2", features=["full"]}
+
+dirs = "2.0"
+csv = "1.1"
+unicase = "2.6"
 unicase_serde = "0.1.0"
 linked-hash-map = {git="https://github.com/izderadicka/linked-hash-map.git", features=["serde_impl"]}
 
 # for ssl
-tokio-tls = {version="0.2", optional=true}
+tokio-tls = {version="0.3", optional=true}
 native-tls = {version="0.2", optional=true}
 
 cachedirtree = {path="crates/cachedirtree", optional=true}
 
-bytes = {version="0.4", optional=true}
+bytes = {version="0.5", optional=true}
+
+tokio-util = {version="0.2", optional=true}
 
 media_info = {path="crates/media_info"}
 
@@ -58,14 +59,14 @@ path="crates/websock"
 optional = true
 
 [target.'cfg(unix)'.dependencies]
-nix = "0.13"
+nix = "0.17"
 
 [features]
-default = ["tls", "symlinks", "search-cache", "folder-download", "shared-positions"]
+default = ["tls", "symlinks","search-cache", "folder-download", "shared-positions"]
 tls=["tokio-tls", "native-tls"]
 symlinks=["cachedirtree/symlinks"]
 search-cache=["cachedirtree"]
-transcoding-cache=["simple-file-cache", "bytes"]
+transcoding-cache=["simple-file-cache", "bytes", "tokio-util"]
 folder-download = ["async-tar"]
 static = ["media_info/static"]
 partially-static = ["media_info/partially-static"]
