--- a/crates/async-tar/Cargo.toml
+++ b/crates/async-tar/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2018"
 
 [dependencies]
 tar="0.4"
-futures="0.1.25"
-tokio="0.1"
+futures="0.3"
+tokio={version="0.2", features=["full"]}
 
 [dev-dependencies]
-tempfile="3.0"
+tempfile="3.1"
+tokio-util = {version="0.2", features=["codec"]}
 
