--- a/crates/file-cache/Cargo.toml
+++ b/crates/file-cache/Cargo.toml
@@ -1,27 +1,26 @@
 [package]
 name = "simple-file-cache"
-version = "0.1.4"
+version = "0.2.0"
 authors = ["Ivan <ivan.zderadicka@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-linked-hash-map = "0.5.1"
+linked-hash-map = "0.5.2"
 #filetime = "0.2"
-rand = "0.6"
-data-encoding = "2.1.1"
+rand = "0.7"
+data-encoding = "2.2"
 quick-error ="1.2"
 log = "0.4"
-byteorder = "1.2"
+byteorder = "1.3"
 
-tokio = { version="0.1", optional=true }
-tokio-threadpool = { version = "0.1", optional = true}
+tokio = { version="0.2", optional=true, features=["full"] }
+
 
 [features]
-asynch = ["tokio", "tokio-threadpool"]
+asynch = ["tokio"]
 
 [dev-dependencies]
-env_logger = "0.6"
-tempfile ="3.0"
-futures = "0.1.25"
+env_logger = "0.7"
+tempfile ="3.1"
 
 
