--- a/crates/file-cache/Cargo.toml
+++ b/crates/file-cache/Cargo.toml
@@ -13,7 +13,7 @@ thiserror ="1.0"
 log = "0.4"
 byteorder = "1.3"
 
-tokio = { version="0.2", optional=true, features=["full"] }
+tokio = { version="0.2", optional=true, features=["macros", "rt-core", "fs", "blocking"] }
 
 
 [features]
