--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.12.1"
 authors = ["Ivan <ivan.zderadicka@gmail.com>"]
 edition = "2018"
 
+[workspace]
+members = ["crates/*"]
+
 [dependencies]
 env_logger = "0.7"
 log = {version="0.4", features = ["release_max_level_info"]}
@@ -75,6 +78,3 @@ shared-positions = ["websock"]
 [profile.release]
 lto = true
 codegen-units = 1
-
-
-
