--- a/crates/async-tar/Cargo.toml
+++ b/crates/async-tar/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 tar="0.4"
 futures="0.3"
-tokio={version="0.2", features=["full"]}
+tokio={version="0.2", features=["fs", "stream"]}
 
 [dev-dependencies]
 tempfile="3.1"
