--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y  openssl libssl-dev libbz2-dev zlib1g-dev ffmpeg yasm
 #cache: cargo
+before_script:
+  - rustup component add rustfmt
 script:
   - cargo fmt --all -- --check
   - cargo test --verbose --features partially-static,transcoding-cache
