--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ serde_derive = "1.0"
 serde_yaml = "0.8"
 clap = "2"
 lazy_static = "1.4"
-quick-error = "1.2"
+thiserror = "1.0"
 url = "2.1"
 percent-encoding = "2.1"
 num_cpus = "1.12"
