--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ serde_yaml = "0.8"
 clap = "2"
 lazy_static = "1.4"
 thiserror = "1.0"
+anyhow = "1.0"
 url = "2.1"
 percent-encoding = "2.1"
 num_cpus = "1.12"
