--- a/test_data/sample-config.yaml
+++ b/test_data/sample-config.yaml
@@ -9,6 +9,7 @@ thread_pool:
 base_dirs:
   - test_data
 shared_secret: asecret
+base_url: /user/audioserve
 transcoding:
   max_parallel_processes: 8
   max_runtime_hours: 24
