--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ dirs = "3.0"
 csv = "1.1"
 unicase = "2.6"
 unicase_serde = "0.1.0"
-linked-hash-map = {git="https://github.com/izderadicka/linked-hash-map.git", features=["serde_impl"]}
+linked-hash-map = {git="https://github.com/izderadicka/linked-hash-map.git", version="0.5.3", features=["serde_impl"]}
 
 # for ssl
 tokio-tls = {version="0.3", optional=true}
