--- a/crates/file-cache/Cargo.toml
+++ b/crates/file-cache/Cargo.toml
@@ -7,20 +7,21 @@ edition = "2018"
 [dependencies]
 linked-hash-map = "0.5.3"
 #filetime = "0.2"
-rand = "0.7"
+rand = "0.8"
 data-encoding = "2.2"
 thiserror ="1.0"
 log = "0.4"
 byteorder = "1.3"
 
-tokio = { version="0.2", optional=true, features=["macros", "rt-core", "fs", "blocking"] }
+tokio = { version="1.0", optional=true, features=[ "rt", "fs"] }
 
 
 [features]
 asynch = ["tokio"]
 
 [dev-dependencies]
-env_logger = "0.7"
+env_logger = "0.8"
 tempfile ="3.1"
+tokio = { features=["io-util", "macros",] }
 
 
