--- a/crates/file-cache/Cargo.toml
+++ b/crates/file-cache/Cargo.toml
@@ -22,6 +22,6 @@ asynch = ["tokio"]
 [dev-dependencies]
 env_logger = "0.8"
 tempfile ="3.1"
-tokio = { features=["io-util", "macros",] }
+tokio = { version="1.0", features=["io-util", "macros",] }
 
 
