--- a/crates/websock/Cargo.toml
+++ b/crates/websock/Cargo.toml
@@ -6,13 +6,15 @@ edition = "2018"
 
 [dependencies]
 
-hyper = "0.13"
-tokio = {version="0.2", features=["rt-threaded", "macros", "io-util", "fs"]}
+hyper = "0.14"
+tokio = {version="1.0", features=["rt-multi-thread"]}
 futures = "0.3"
 log = {version="0.4", features=["max_level_debug"]}
-tokio-tungstenite = "0.10"
+tokio-tungstenite = "0.13"
 thiserror = "1.0"
 headers = "0.3"
 
 [dev-dependencies]
-env_logger = "0.7"
+env_logger = "0.8"
+hyper = {version="0.14", features=["server", "http1", "http2", "tcp"]}
+tokio = {version="1.0", features=["macros", "io-util", "fs"]}
