--- a/client/package.json
+++ b/client/package.json
@@ -1,34 +1,33 @@
 {
   "name": "audioserve-client",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "description": "Simple HTML5 client for audioserve",
+  "private": true,
   "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack --progress --watch --config webpack.dev.js",
-    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "start": "webpack serve --open --config webpack.dev.js",
     "lint": "jshint src/*.js"
   },
   "keywords": [],
   "author": "Ivan<ivan@zderadicka.eu>",
   "license": "MIT",
   "devDependencies": {
-    "css-loader": "^3.6.0",
-    "jshint": "^2.11.1",
-    "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "^2.3.7",
-    "webpack": "^4.43.0",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "css-loader": "^5.0.1",
+    "jshint": "^2.12.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.17.0",
+    "webpack-cli": "4.4.0",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "base64js": "^1.0.1",
-    "bootstrap": "^4.5.0",
+    "base64-js": "^1.5.1",
+    "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "js-sha256": "^0.9.0",
-    "moment": "^2.26.0",
+    "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "showdown": "^1.9.1"
   }
