fix static build
- plus extend README with more info about security

--- a/Dockerfile.static
+++ b/Dockerfile.static
@@ -1,10 +1,10 @@
-FROM alpine:edge AS build
+FROM alpine:3.13 AS build
 MAINTAINER Ivan <ivan@zderadicka.eu>
 ENV CARGO_ARGS=""
 ENV FEATURES=""
 
 RUN apk update &&\
-    apk add git bash curl yasm build-base openssl-dev openssl-libs-static taglib-dev\
+    apk add git bash curl yasm build-base openssl-dev openssl-libs-static\
     wget zlib-dev zlib-static bzip2-static bzip2-dev rust cargo npm &&\
     mkdir /src &&\
     mkdir /.cargo &&\
